fixed z-index

--- a/themes/blankslate-child/style.css
+++ b/themes/blankslate-child/style.css
@@ -64,7 +64,7 @@ Template: blankslate
    position: fixed;
    width: 100%;
    top: 0;
-   z-index: 99;
+   z-index: 9999;
 
  }
 
